# ansible-playbooks

./: .gitignore  AGENTS.md  CLAUDE.md  MOLECULE_TESTING.md  README.md  ansible.cfg  galaxy.yml  inventory.yml  justfile  k8s_role_split_summary.md  pyproject.toml  requirements.txt
inventory/: README.md  hosts.yml  raspberrypi.yml
inventory/group_vars/: all_raspberry_pi.yml  k3s_control_plane.yml  pi_k3s_agents.yml  raspberrypi.yml  rhel_k3s_agents.yml  vps_servers.yml
manifests/openbao/: helm-custom-values.yaml  openbao-networking.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
mulliken/default/: README.md  galaxy.yml
playbooks/: MIGRATION.md  README.md  README_update_notifications.md  applications.yml  core.yml  dashboards.yml  deploy.yml  infrastructure-deploy-complete.yml  infrastructure-install-nfs-support.yml  infrastructure.yml  install_k8s_apps.yml  install_kube_resources.yml  k3s-join-agents.yml  k3s.yml  maintenance-update-packages.yml  observability.yml  reboot.yml  site.yml  system_monitoring_with_ntfy.yml  test_ntfy.yml  update-all.yml  update.yml  update_packages.yml  uptime-kuma.yml
playbooks/archive/: disable-ipv6.yml  infrastructure-deploy-complete.yml  install_k8s_apps.yml  k3s-join-agents.yml  uninstall_portainer.yml
playbooks/utilities/: monitoring.yml  reboot.yml  test-notifications.yml
playbooks/vars/: grafana_secrets.yml  homepage_secrets.yml  immich_secrets.yml  media_secrets.yml  paperless_secrets.yml  (+3 more)
scripts/: README.md  configure_openbao.sh  homepage-add-icon.sh  sonarr-proxies.sh  start-dashboard.sh
(+322 files in other folders)
