[project]
name = "ansible-playbooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=11.2.0",
    "ansible-core>=2.18.3",
    "ansible-lint>=25.1.3",
    "molecule>=25.3.1",
    "molecule-plugins[podman]>=23.7.0",
    "yamllint>=1.35.1",
]
